src/index.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

a {
  font-weight: 500;
  color: #000000;
  text-decoration: inherit;
}

a:hover {
  color: #535bf2;
}

.iphone {
  background-color: #000000;
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
  border: 2px solid red;
}

.iphone .div {
  background-color: #000000;
  height: 2178px;
  overflow: hidden;
  position: relative;
  width: 390px;
}

.iphone .overlap {
  height: 473px;
  left: 0;
  position: absolute;
  top: -1px;
  width: 590px;
}

.iphone .overlap-group {
  height: 473px;
  left: 0;
  position: absolute;
  top: 0;
  width: 590px;
}

.heroBanner {
  height: 221px;
  left: 0;
  position: absolute;
  top: 84px;
  width: 390px;
}

.iphone .rectangle {
  background-color: #00000038;
  height: 242px;
  left: 0;
  position: absolute;
  top: 84px;
  width: 388px;
}

.iphone .rectangle-2 {
  background: linear-gradient(360deg, rgb(0, 0, 0) 0%, rgba(0, 0, 0, 0) 100%);
  height: 132px;
  left: 0;
  position: absolute;
  top: 195px;
  width: 391px;
}

.menuTextWrapper {
  color: #ffffff;
  font-family: "Roboto", Helvetica;
  font-size: 16px;
  font-weight: 500;
  height: 86px;
  left: 323px;
  letter-spacing: 0.48px;
  line-height: 22.7px;
  position: absolute;
  top: 0;
  width: 267px;
}

.iphone .group {
  height: 189px;
  left: 71px;
  position: absolute;
  top: 283px;
  width: 320px;
}

.iphone .overlap-2 {
  background-color: #60636754;
  height: 189px;
  position: relative;
  width: 312px;
}

.iphone .p {
  color: #ffffff;
  font-family: "Roboto", Helvetica;
  font-size: 14px;
  font-weight: 400;
  height: 86px;
  left: 26px;
  letter-spacing: 0.42px;
  line-height: 19.9px;
  position: absolute;
  top: 57px;
  width: 267px;
}
.iphone .text-wrapper-2 {
  color: #ffffff;
  font-family: "Bai Jamjuree", Helvetica;
  font-size: 32px;
  font-weight: 700;
  height: 38px;
  left: 22px;
  letter-spacing: 0;
  line-height: normal;
  position: absolute;
  top: 16px;
  white-space: nowrap;
  width: 226px;
}

.iphone .text-wrapper-3 {
  color: #ffffff;
  font-family: "Roboto", Helvetica;
  font-size: 10px;
  font-style: italic;
  font-weight: 400;
  height: 21px;
  left: 26px;
  letter-spacing: 0;
  line-height: 16.5px;
  position: absolute;
  top: 160px;
  width: 39px;
}

.iphone .text-wrapper-4 {
  color: #ffffff;
  font-family: "Roboto", Helvetica;
  font-size: 10px;
  font-style: italic;
  font-weight: 400;
  height: 21px;
  left: 157px;
  letter-spacing: 0;
  line-height: 16.5px;
  position: absolute;
  top: 162px;
  width: 40px;
}

.iphone .line {
  height: 2px;
  left: 79px;
  position: absolute;
  top: 171px;
  width: 64px;
}

.iphone .img {
  height: 2px;
  left: 205px;
  position: absolute;
  top: 171px;
  width: 64px;
}

.iphone .siteLogo {
  height: 37px;
  left: 20px;
  position: absolute;
  top: 26px;
  width: 32px;
}

.iphone .overlap-3 {
  height: 195px;
  left: 0;
  position: absolute;
  top: 1986px;
  width: 650px;
}

.iphone .rectangle-3 {
  background-color: #ffffff1c;
  height: 190px;
  left: 0;
  position: absolute;
  top: 1px;
  width: 391px;
}

.iphone .siteLogoFooter {
  height: 46px;
  left: 14px;
  position: absolute;
  top: 132px;
  width: 40px;
}

.iphone .text-wrapper-5 {
  color: #ffffff;
  font-family: "Roboto", Helvetica;
  font-size: 8px;
  font-weight: 400;
  height: 49px;
  left: 301px;
  letter-spacing: 0;
  line-height: normal;
  position: absolute;
  top: 147px;
  width: 349px;
}

.iphone .flexcontainer {
  align-items: flex-start;
  display: flex;
  flex-direction: column;
  gap: 25px;
  height: 106px;
  left: 19px;
  position: absolute;
  top: 0;
  width: 110px;
}

.iphone .text {
  align-self: stretch;
  color: #ffffff;
  font-family: "Roboto", Helvetica;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0.48px;
  line-height: 10.8px;
  position: relative;
}

.iphone .span {
  color: #ffffff;
  font-family: "Roboto", Helvetica;
  font-size: 12px;
  font-weight: 400;
  letter-spacing: 0.48px;
  line-height: 10.8px;
}

.iphone .flexcontainer-2 {
  align-items: flex-start;
  display: flex;
  flex-direction: column;
  gap: 25px;
  height: 105px;
  left: 117px;
  position: absolute;
  top: 1px;
  width: 200px;
}

.iphone .github {
  height: 22px;
  left: 310px;
  position: absolute;
  top: 23px;
  width: 22px;
}

.iphone .linkedIn {
  height: 22px;
  left: 345px;
  position: absolute;
  top: 23px;
  width: 22px;
}

.iphone .line-2 {
  height: 1px;
  left: 8px;
  object-fit: cover;
  position: absolute;
  top: 102px;
  width: 359px;
}

.iphone .text-wrapper-6 {
  color: #ffffff;
  font-family: "Bai Jamjuree", Helvetica;
  font-size: 26px;
  font-weight: 700;
  height: 83px;
  left: 56px;
  letter-spacing: 1.04px;
  line-height: normal;
  position: absolute;
  top: 1317px;
  width: 276px;
}

.iphone .overlap-4 {
  height: 374px;
  left: 38px;
  position: absolute;
  top: 1403px;
  width: 326px;
}

.iphone .rectangle-4 {
  background-color: #d9d9d91c;
  border-radius: 5px;
  height: 374px;
  left: 0;
  position: absolute;
  top: 0;
  width: 312px;
}

.iphone .rectangle-5 {
  height: 374px;
  left: 0;
  position: absolute;
  top: 0;
  width: 310px;
}

.iphone .rightArrow {
  height: 43px;
  left: 308px;
  position: absolute;
  top: 166px;
  width: 19px;
}

.iphone .overlap-5 {
  height: 131px;
  left: 36px;
  position: absolute;
  top: 1831px;
  width: 312px;
}

.iphone .text-wrapper-7 {
  color: #ffffff;
  font-family: "Bai Jamjuree", Helvetica;
  font-size: 22px;
  font-weight: 700;
  height: 45px;
  left: 0;
  letter-spacing: 0;
  line-height: normal;
  position: absolute;
  top: 0;
  width: 286px;
}

.iphone .text-wrapper-8 {
  color: #ffffff;
  font-family: "Roboto", Helvetica;
  font-size: 14px;
  font-weight: 400;
  height: 99px;
  left: 0;
  letter-spacing: 0;
  line-height: 23.1px;
  position: absolute;
  top: 31px;
  width: 312px;
}

.iphone .overlap-6 {
  height: 45px;
  left: 38px;
  position: absolute;
  top: 1780px;
  width: 312px;
}

.iphone .text-wrapper-9 {
  color: #86c65f;
  font-family: "Roboto", Helvetica;
  font-size: 16px;
  font-weight: 500;
  height: 45px;
  left: 13px;
  letter-spacing: 0.48px;
  line-height: normal;
  position: absolute;
  top: 0;
  width: 286px;
}

.iphone .overlap-group-wrapper {
  height: 35px;
  left: 0;
  position: absolute;
  top: 8px;
  width: 312px;
}

.iphone .overlap-group-2 {
  height: 35px;
  left: -1px;
  position: relative;
  width: 313px;
}

.iphone .overlap-7 {
  height: 142px;
  left: 15px;
  position: absolute;
  top: 527px;
  width: 365px;
}

.iphone .text-wrapper-10 {
  color: #ffffff;
  font-family: "Bai Jamjuree", Helvetica;
  font-size: 26px;
  font-weight: 700;
  height: 81px;
  left: 81px;
  letter-spacing: 1.04px;
  line-height: normal;
  position: absolute;
  top: 0;
  width: 192px;
}

.iphone .rectangle-6 {
  background-color: #ffffff1c;
  border-radius: 4px;
  height: 45px;
  left: 0;
  position: absolute;
  top: 91px;
  width: 365px;
}

.iphone .toggleButton {
  height: 45px;
  left: 0;
  position: absolute;
  top: 91px;
  width: 365px;
}

.iphone .text-wrapper-11 {
  color: #ffffff;
  font-family: "Roboto", Helvetica;
  font-size: 18px;
  font-weight: 400;
  height: 65px;
  left: 20px;
  letter-spacing: 0.54px;
  line-height: 25.6px;
  position: absolute;
  top: 97px;
  width: 207px;
}

.iphone .line-5 {
  height: 2px;
  left: 19px;
  position: absolute;
  top: 124px;
  width: 113px;
}

.iphone .toggleDropArrow {
  height: 10px;
  left: 326px;
  position: absolute;
  top: 109px;
  width: 22px;
}

.iphone .text-wrapper-12 {
  color: #ffffff;
  font-family: "Bai Jamjuree", Helvetica;
  font-size: 22px;
  font-weight: 700;
  height: 45px;
  left: 423px;
  letter-spacing: 0;
  line-height: normal;
  position: absolute;
  top: 1831px;
  width: 286px;
}

.iphone .overlap-8 {
  height: 131px;
  left: 764px;
  position: absolute;
  top: 1831px;
  width: 312px;
}

.iphone .all-race-results-are {
  color: #ffffff;
  font-family: "Roboto", Helvetica;
  font-size: 4px;
  font-weight: 400;
  height: 99px;
  left: 423px;
  letter-spacing: 0;
  line-height: 23.1px;
  position: absolute;
  top: 1886px;
  width: 312px;
}

.iphone .overlap-9 {
  height: 45px;
  left: 425px;
  position: absolute;
  top: 1780px;
  width: 312px;
  border: 2x solid red;
}

.iphone .line-wrapper {
  background-image: url(./line-17-2.svg);
  background-size: 100% 100%;
  height: 1px;
  left: -4770px;
  position: relative;
  top: 517px;
}

.iphone .line-6 {
  height: 1px;
  left: 1px;
  position: absolute;
  top: 0;
  width: 35px;
}

.iphone .overlap-10 {
  height: 45px;
  left: 767px;
  position: absolute;
  top: 1780px;
  width: 312px;
}

.iphone .img-wrapper {
  background-image: url(./line-17-3.svg);
  background-size: 100% 100%;
  height: 1px;
  left: -4770px;
  position: relative;
  top: 517px;
}

.iphone .rectangle-8 {
  background-color: #d9d9d91c;
  border-radius: 5px;
  height: 374px;
  left: 423px;
  position: absolute;
  top: 1403px;
  width: 312px;
}

.iphone .rectangle-9 {
  background-color: #d9d9d91c;
  border-radius: 5px;
  height: 374px;
  left: 767px;
  position: absolute;
  top: 1403px;
  width: 312px;
}

.iphone .rectangle-10 {
  height: 374px;
  left: -4003px;
  position: absolute;
  top: 1885px;
  width: 312px;
}

.iphone .rectangle-11 {
  height: 374px;
  left: -4346px;
  position: absolute;
  top: 1885px;
  width: 310px;
}

.iphone .overlap-11 {
  height: 65px;
  left: 15px;
  position: absolute;
  top: 672px;
  width: 365px;
}

.iphone .rectangle-12 {
  background-color: #ffffff1c;
  border-radius: 4px;
  height: 45px;
  left: 0;
  position: absolute;
  top: 13px;
  width: 365px;
}

.iphone .toggleButton2 {
  height: 45px;
  left: 0;
  position: absolute;
  top: 13px;
  width: 365px;
}

.iphone .rectangle-13 {
  height: 45px;
  left: 0;
  position: absolute;
  top: 14px;
  width: 365px;
}

.iphone .text-wrapper-13 {
  color: #ffffff;
  font-family: "Roboto-Regular", Helvetica;
  font-size: 18px;
  font-weight: 400;
  height: 65px;
  left: 20px;
  letter-spacing: 0.54px;
  line-height: 25.6px;
  position: absolute;
  top: 20px;
  width: 207px;
}


.iphone .line-7 {
  height: 2px;
  left: 19px;
  position: absolute;
  top: 47px;
  width: 127px;
}

.iphone .toggleDropArrow-2 {
  height: 10px;
  left: 326px;
  position: absolute;
  top: 34px;
  width: 22px;
}

.iphone .vector-5 {
  height: 10px;
  left: 326px;
  position: absolute;
  top: 31px;
  width: 22px;
}

.iphone .overlap-12 {
  height: 65px;
  left: 15px;
  position: absolute;
  top: 740px;
  width: 365px;
}

.iphone .rectangle-14 {
  background-color: #ffffff1c;
  border-radius: 4px;
  height: 45px;
  left: 0;
  position: absolute;
  top: 14px;
  width: 365px;
}

.iphone .toggleButton3 {
  height: 45px;
  left: 0;
  position: absolute;
  top: 15px;
  width: 365px;
}

.iphone .line-8 {
  height: 2px;
  left: 17px;
  position: absolute;
  top: 47px;
  width: 106px;
}

.iphone .toggleDropArrow-3 {
  height: 10px;
  left: 326px;
  position: absolute;
  top: 34px;
  width: 22px;
}

#tableContainer {
  width: 95vw;
  border: 2px solid yellow;
  
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

